[commit] add projects files manager - test kivy console for execute command

--- a/buildozergui.kv
+++ b/buildozergui.kv
@@ -235,6 +235,10 @@
 	pos_hint: {'center_x': .5, 'center_y': .46}
 	do_default_tab: False
 	TabbedPanelItem:
+		text: 'Your projects'
+		Label:
+			text:'Select a project or create new'
+	TabbedPanelItem:
 		text: 'Distribuite'
 		Label:
 			text:'Select modules'
